--- a/templates/chatbot.html
+++ b/templates/chatbot.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/css/styles22.css">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 </head>
 <body>
         <!-- Navbar -->
