--- a/static/css/styles22.css
+++ b/static/css/styles22.css
@@ -59,7 +59,7 @@ body {
 
 /* Message Styling */
 .chatbox .message {
-    max-width: 75%;
+    max-width: 90%;
     margin-bottom: 10px;
     padding: 10px 15px;
     border-radius: 15px;
@@ -75,7 +75,7 @@ body {
 
 .chatbox .message.bot {
     background: #E1E0B2;
-    color: #BF360C;
+    color: #041e13;
     align-self: flex-start;
 }
 
